# glycin

./: CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-LGPL-2.1  NEWS  README.md  deny.toml  glycin.doap  meson.build  meson_options.txt
build-aux/: crates-version.py  dist-vendor.sh  generate-news.py  publish-crates-io.py  setup-integration-test.py
docs/0+/: org.gnome.glycin.DecodingInstruction.xml
docs/1+/: org.gnome.glycin.Editor.xml  org.gnome.glycin.Loader.xml
docs/2+/: org.gnome.glycin.Editor.xml  org.gnome.glycin.Loader.xml
docs/website/: build.bash  footer.html  format-details.yml  header.html  list-formats.rs  style.css
glycin/: Cargo.toml
glycin-common/: Cargo.toml
glycin-common/src/: binary_data.rs  error.rs  lib.rs  memory_format.rs  memory_format_selection.rs  operations.rs  shared_memory.rs
glycin-dev-tools/: Cargo.toml
glycin-loaders/: meson.build
glycin-loaders/glycin-heif/: Cargo.toml  glycin-heif.conf  glycin-heif.thumbnailer.in
glycin-loaders/glycin-heif/src/: editing.rs  main.rs
glycin-loaders/glycin-image-rs/: Cargo.toml  glycin-image-rs.conf  glycin-image-rs.thumbnailer.in
glycin-loaders/glycin-image-rs/src/: editor.rs  main.rs
glycin-loaders/glycin-image-rs/src/editor/: jpeg.rs  png.rs
glycin-loaders/glycin-jpeg2000/: Cargo.toml  glycin-jpeg2000.conf  glycin-jpeg2000.thumbnailer.in
glycin-loaders/glycin-jpeg2000/src/: main.rs
glycin-loaders/glycin-jxl/: Cargo.toml  glycin-jxl.conf  glycin-jxl.thumbnailer.in
glycin-loaders/glycin-jxl/src/: editing.rs  main.rs
glycin-loaders/glycin-raw/: Cargo.toml  glycin-raw.conf  glycin-raw.thumbnailer.in
glycin-loaders/glycin-svg/: Cargo.toml  glycin-svg.conf  glycin-svg.thumbnailer.in
glycin-thumbnailer/: Cargo.toml  README.md  meson.build
glycin-thumbnailer/src/: main.rs
glycin-utils/: Cargo.toml
glycin-utils/src/: dbus_editor_api.rs  dbus_loader_api.rs  dbus_types.rs  editing.rs  error.rs  image_rs.rs  img_buf.rs  instruction_handler.rs  lib.rs  safe_math.rs
glycin-utils/src/editing/: change_memory_format.rs  clip.rs  operations.rs  orientation.rs
glycin/src/: api_common.rs  api_creator.rs  api_editor.rs  api_loader.rs  config.rs  dbus.rs  error.rs  fontconfig.rs  gobject.rs  icc.rs  lib.rs  orientation.rs  pool.rs  sandbox.rs  util.rs
glycin/src/gobject/: creator.rs  encoded_image.rs  frame.rs  frame_request.rs  image.rs  loader.rs  new_frame.rs
libglycin/: Cargo.toml  build.rs  meson.build
libglycin/doc/: libglycin-gtk4.toml  libglycin.toml  urlmap.js
libglycin/include/: glycin-gtk4.h  glycin.h
libglycin/libglycin-gtk4/: Cargo.toml  build.rs
libglycin/libglycin-gtk4/src/: lib.rs
libglycin/src/: common.rs  creator.rs  encoded_image.rs  error.rs  frame.rs  frame_request.rs  image.rs  lib.rs  loader.rs  memory_format.rs  new_frame.rs
news.d/: previous
news.d/1.1.0/: changed-dont-use-regex-for-smaller-binaries  fixed-specify-font-in-font-test
news.d/1.1.1/: fixed-gzip-file-format-not-detected
news.d/1.1.2/: added-log-loader-output  fixed-fix-jpegxl-rs-version  fixed-images-rs-rgba32f  fixed-not-building-with-libheif-1.9
news.d/1.1.4/: components.json  fixed-libglycin-do-not-depend-on-gtk  fixed-libglycin-include-stdint  fixed-support-additional-qoi-mime-type
news.d/1.1.5/: fixed-support-apng-mime-type
news.d/1.1.6/: fixed-apng-mime-type
news.d/1.1.alpha/: added-c-bindings  added-editors  added-glycin-apply-transformations  added-glycin-list-of-default-mimes  added-glycin-select-tokio  added-no-loaders-error  added-out-of-memory-error  changed-libjxl-0.10  changed-specific-error-for-no-loaders  changed-svg-used-C-bindings
news.d/1.1.beta/: added-automatically-detect-flatpak-devel  added-capture-loader-stdio  added-test-animations  fixed-add-swap-to-memory-calculation  fixed-fontconfig-cant-update-cache  fixed-make-memfd-seals-more-reliable  fixed-max-texture-size-wrong
news.d/1.2.0/: changed-tests-serde-yaml  components.json
news.d/1.2.1/: components.json  fixed-editing-png-jpeg-already-rotated  fixed-glycin-add-missing-syscalls  fixed-png-editing-pre-rotated-legacy  fixed-wrong-with-icc-profiles
news.d/1.2.2/: components.json  fixed-multiple-jpeg-rendering-issues
news.d/1.2.3/: components.json  fixed-one-jpeg-rendering-issues
news.d/1.2.4/: components.json  fixed-jpeg-edit-progressive  fixed-sandbox-recv  fixed-svg-premultiplied
news.d/1.2.alpha/: added-glycin-list-editors  added-jpeg-editing  added-png-cicp-support  added-png-editing  added-png-exif-chunk  added-xmp-support  changed-glycin-deliver-iccp-wide-gamut  changed-repo  components.json
news.d/1.2.alpha.10/: changed-zbus-5.2  components.json
news.d/1.2.beta/: changed-raw-update-deps  components.json  fixed-libglycin-annotations
news.d/1.2.rc/: changed-glycin-sandbox-increase-max-ram  changed-glycin-use-specific-canel-error-type  changed-glycin-utils-handle-too-large-clip-values  components.json  fixed-glycin-color-state-error  fixed-glycin-utils-editing-large  fixed-jpeg-allow-larger-images-in-editing  fixed-jpeg-rotation-and-mirror  fixed-libglycin-vapi
news.d/2.0.0/: components.json  fixed-flatpak-spawn-not-working  fixed-libglycin-gtk4-pkg-config  fixed-new-png-tiff-gif-versions  fixed-sandbox-flatpak-spawn-env  fixed-sandbox-uname  fixed-svg-aspect-ratio
news.d/2.0.1/: added-disable-animation-loops  added-sandbox-bwrap-fallback  components.json  fixed-glycin-bigendian-tests  fixed-glycin-pool-timeout-missing  fixed-heif-ycbcr  fixed-sandbox-close-fds  fixed-sandbox-fontconfig-canonicalize
news.d/2.0.2/: components.json  fixed-loop-animation-required
news.d/2.0.alpha.2/: added-glycin-other-loader-sources  added-no-more-frames-error  added-png-text-metadata  added-pooled-loaders-and-editors  added-transform-memory-formats  changed-dont-expose-basedir-by-default  changed-new-compat-version  components.json  fixed-loaders-exit-too-early
news.d/2.0.alpha.5/: added-saving-images  components.json  (+3 more)
supply-chain/: audits.toml  config.toml
tests/: Cargo.toml  change_memory_format.rs  dbus_api_stability.rs  editing.rs  encoding.rs  libglycin.py  tests.rs  utils.rs
(+36 files in other folders)
