[package]
name = "glycin-common"
version = "1.0.0"
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
bitflags.workspace = true
glib = { workspace = true, optional = true }
gufo-common.workspace = true
half = { workspace = true, features = ["zerocopy"] }
memmap.workspace = true
nix.workspace = true
paste.workspace = true
rmp-serde.workspace = true
serde.workspace = true
thiserror.workspace = true
zerocopy.workspace = true
zvariant.workspace = true

[features]
default = []
gobject = ["dep:glib"]
