[package]
name = "glycin-dev-tools"
publish = false
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
glycin = { workspace = true, features = ['gdk4', 'async-io'] }
gdk.workspace = true
gio.workspace = true
async-io.workspace = true
gufo-common.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
