[package]
name = "glycin-thumbnailer"
publish = false
version = "2.0.0"
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
glycin = { workspace = true, features = ["async-io"] }
gio.workspace = true
png.workspace = true
image.workspace = true

[lints]
workspace = true
