[package]
name = "glycin-utils"
version = "4.0.2"
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-lock.workspace = true
bitflags.workspace = true
blocking.workspace = true
env_logger.workspace = true
futures-lite = { workspace = true, optional = true }
futures-util.workspace = true
glib = { workspace = true, optional = true }
glycin-common.workspace = true
gufo-common = { workspace = true, features = ["serde", "zvariant"] }
half.workspace = true
image = { workspace = true, optional = true }
libc.workspace = true
libseccomp.workspace = true
log.workspace = true
memmap.workspace = true
nix = { workspace = true, features = ["fs", "signal"] }
paste.workspace = true
rayon.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, optional = true }
zbus.workspace = true
zerocopy.workspace = true

[features]
default = ["async-io"]
async-io = ["zbus/async-io"]
tokio = ["dep:tokio", "zbus/tokio"]
image-rs = ["dep:image", "loader-utils"]
loader-utils = ["dep:futures-lite"]
gobject = ["glib"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
