[package]
name = "glycin"
readme = "../README.md"

version = "3.0.1"
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["async-io"]
async-io = [
    "dep:async-fs",
    "dep:async-global-executor",
    "dep:async-io",
    "dep:async-lock",
    "dep:blocking",
    "dep:futures-timer",
    "glycin-utils/async-io",
    "zbus/async-io",
]
tokio = ["dep:tokio", "dep:tokio-stream", "glycin-utils/tokio", "zbus/tokio"]
gobject = [
    "glycin-common/gobject",
    "glycin-utils/gobject",
    "dep:tracing-subscriber",
]
gdk4 = ["dep:gdk"]
unstable-config = []

[dependencies]
async-fs = { workspace = true, optional = true }
async-global-executor = { workspace = true, optional = true }
async-io = { workspace = true, optional = true }
async-lock = { workspace = true, optional = true }
blocking = { workspace = true, optional = true }
futures-channel.workspace = true
futures-timer = { workspace = true, optional = true }
futures-util.workspace = true
gdk = { workspace = true, optional = true }
gio.workspace = true
glib.workspace = true
glycin-common.workspace = true
glycin-utils = { workspace = true }
gufo-common.workspace = true
gufo-exif.workspace = true
lcms2-sys.workspace = true
lcms2.workspace = true
libc.workspace = true
libseccomp.workspace = true
memfd.workspace = true
memmap.workspace = true
nix = { workspace = true, features = ["fs", "resource", "signal"] }
static_assertions = { workspace = true }
thiserror.workspace = true
tokio = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
tracing.workspace = true
yeslogic-fontconfig-sys.workspace = true
zbus = { workspace = true, features = ["p2p"] }

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
features = []
