[package]
name = "libglycin"
publish = false
version = "2.0.1"
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-global-executor.workspace = true
futures-task.workspace = true
gio.workspace = true
glib.workspace = true
glycin = { workspace = true, features = ["async-io", "gobject"] }
tracing-subscriber.workspace = true
tracing.workspace = true

[lib]
name = "glycin"
crate-type = ["cdylib"]

[package.metadata.cargo-semver-checks.lints]
enum_marked_non_exhaustive = { level = "warn", required-update = "minor" }
