[package]
name = "tests"
publish = false
license.workspace = true

version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = ["async-io"]
async-io = ["glycin/async-io", "glycin-utils/async-io"]
tokio = ["glycin/tokio", "glycin-utils/tokio"]

[dev-dependencies]
async-io.workspace = true
blocking.workspace = true
glycin = { workspace = true, features = ["gdk4"] }
glycin-utils = { workspace = true, features = ["loader-utils"] }
gio.workspace = true
tokio.workspace = true
gdk.workspace = true
zbus = { workspace = true, features = ["p2p"] }
tracing-subscriber.workspace = true
# The unmaintained serde_yaml 0.9 crate should work here as well
# serde_yaml = "0.9.33"
serde_yaml = { package = "serde_yaml_ng", version = "0.10.0" }

[[test]]
name = "change_memory_format"
path = "change_memory_format.rs"

[[test]]
name = "editing"
path = "editing.rs"

[[test]]
name = "tests"
path = "tests.rs"


[[test]]
name = "encoding"
path = "encoding.rs"

[[test]]
name = "dbus_api_stability"
path = "dbus_api_stability.rs"

[dependencies]
gufo-common.workspace = true
