[package]
name = "glycin-heif"
publish = false
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
four-cc = "0.4.0"
glycin-utils = { workspace = true, features = ["async-io", "loader-utils"] }
libheif-rs = { version = "2.2.0", default-features = false, features = [
    "v1_17",
] }
safe-transmute.workspace = true
gufo-common.workspace = true
