[package]
name = "glycin-jxl"
publish = false
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
glycin-utils = { workspace = true, features = ["async-io", "loader-utils"] }
glycin-common.workspace = true
gufo-common.workspace = true
jpegxl-rs = { version = "0.11.0", default-features = false }
jpegxl-sys = { version = "0.11.0", default-features = false }
zerocopy.workspace = true
