[package]
name = "glycin-raw"
publish = false
version.workspace = true
authors = ["Hubert Figuière <hub@figuiere.net>"]
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
glycin-utils = { workspace = true, features = ["async-io", "loader-utils"] }
gufo-common = { workspace = true, features = ["serde", "zvariant"] }
libopenraw = "=0.4.0-alpha.12"
