[package]
name = "libglycin-gtk4"
publish = false
version = "2.0.1"
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
gdk.workspace = true
glycin = { workspace = true, features = ["async-io", "gobject", "gdk4"] }

[build-dependencies]
system-deps.workspace = true

[package.metadata.system-deps]
glycin-2 = "2.0"

[lints]
workspace = true

[lib]
name = "glycin_gtk4"
crate-type = ["cdylib"]
